@@ -88,52 +88,56 @@ public class FileEncryptionService {
                 wrappedDek, algorithm);
         byte[] metadataBytes = objectMapper.writeValueAsBytes(metadata);
 
-        // Output file layout (paths.outputPath):
-        //   bytes 0-3           : metadata length (4-byte big-endian int)
-        //   bytes 4-(4+N-1)     : metadata JSON (N bytes)
-        //   bytes (4+N) onwards : AES-GCM / ChaCha20 encrypted file content
-        // doFinal() instead of CipherInputStream: AES-GCM and ChaCha20-Poly1305 both append an auth tag
-        // at the end of the ciphertext. JCE will not release any plaintext until the tag is verified,
-        // so CipherInputStream buffers the entire input internally anyway — with worse latency and
-        // no reduction in memory usage. doFinal() is explicit about the full-buffer contract.
-        //
-        // To support files larger than MAX_FILE_BYTES, switch to a chunked scheme: split the file into
-        // fixed-size chunks (e.g. 64KB), encrypt each chunk independently with its own IV and auth tag,
-        // and write chunk boundaries into the metadata. Decryption then verifies each chunk's tag before
-        // releasing that chunk's plaintext — true streaming with per-chunk integrity.
         assertSafeForDoFinal(paths.inputPath());
         long fileSize = Files.size(paths.inputPath());
+        cipherBulkhead.execute(fileSize, () -> doCipherEncrypt(ctx, paths, metadataBytes, fileSize));
+    }
+
+    // Output file layout (paths.outputPath):
+    //   bytes 0-3           : metadata length (4-byte big-endian int)
+    //   bytes 4-(4+N-1)     : metadata JSON (N bytes)
+    //   bytes (4+N) onwards : AES-GCM / ChaCha20 encrypted file content
+    // doFinal() instead of CipherInputStream: AES-GCM and ChaCha20-Poly1305 both append an auth tag
+    // at the end of the ciphertext. JCE will not release any plaintext until the tag is verified,
+    // so CipherInputStream buffers the entire input internally anyway — with worse latency and
+    // no reduction in memory usage. doFinal() is explicit about the full-buffer contract.
+    //
+    // To support files larger than MAX_FILE_BYTES, switch to a chunked scheme: split the file into
+    // fixed-size chunks (e.g. 64KB), encrypt each chunk independently with its own IV and auth tag,
+    // and write chunk boundaries into the metadata. Decryption then verifies each chunk's tag before
+    // releasing that chunk's plaintext — true streaming with per-chunk integrity.
+    private void doCipherEncrypt(FileEncryptionContext ctx, StagingPath paths,
+                                 byte[] metadataBytes, long fileSize) throws Exception {
         Timer.Sample sample = Timer.start(meterRegistry);
-        cipherBulkhead.execute(fileSize, () -> {
-            byte[] encrypted = ctx.cipher().doFinal(Files.readAllBytes(paths.inputPath()));
-            sample.stop(timer("file.cipher.latency", "encrypt"));
-            try (OutputStream out = Files.newOutputStream(paths.outputPath())) {
-                out.write(ByteBuffer.allocate(4).putInt(metadataBytes.length).array());
-                out.write(metadataBytes);
-                out.write(encrypted);
-            }
-            long encryptedSize = 4L + metadataBytes.length + encrypted.length;
-            log.debug("[encrypt] {} → {} bytes (+{:.1f}%)",
-                fileSize, encryptedSize, (encryptedSize - fileSize) * 100.0 / fileSize);
-        });
+        byte[] encrypted = ctx.cipher().doFinal(Files.readAllBytes(paths.inputPath()));
+        sample.stop(timer("file.cipher.latency", "encrypt"));
+        try (OutputStream out = Files.newOutputStream(paths.outputPath())) {
+            out.write(ByteBuffer.allocate(4).putInt(metadataBytes.length).array());
+            out.write(metadataBytes);
+            out.write(encrypted);
+        }
+        long encryptedSize = 4L + metadataBytes.length + encrypted.length;
+        log.debug("[encrypt] {} → {} bytes (+{:.1f}%)",
+            fileSize, encryptedSize, (encryptedSize - fileSize) * 100.0 / fileSize);
     }
 
     private void writeDecrypted(StagingPath paths, String transitKey) throws Exception {
         assertSafeForDoFinal(paths.inputPath());
         long fileSize = Files.size(paths.inputPath());
-        cipherBulkhead.execute(fileSize, () -> {
-            try (InputStream in = Files.newInputStream(paths.inputPath())) {
-                FileEncryptionMetadata metadata = readMetadata(in);
-                String dekBase64 = vaultTransitService.unwrapDek(metadata.wrappedDek(), transitKey);
-                // Same reasoning as encrypt: GCM/Poly1305 auth tag forces JCE to buffer everything
-                // before releasing plaintext — CipherInputStream gives no streaming benefit here.
-                Timer.Sample sample = Timer.start(meterRegistry);
-                byte[] decrypted = encryptionProcessor.initDecryptCipher(metadata, dekBase64)
-                        .doFinal(in.readAllBytes());
-                sample.stop(timer("file.cipher.latency", "decrypt"));
-                Files.write(paths.outputPath(), decrypted);
-            }
-        });
+        cipherBulkhead.execute(fileSize, () -> doCipherDecrypt(paths, transitKey));
+    }
+
+    // Same reasoning as encrypt: GCM/Poly1305 auth tag forces JCE to buffer everything
+    // before releasing plaintext — CipherInputStream gives no streaming benefit here.
+    private void doCipherDecrypt(StagingPath paths, String transitKey) throws Exception {
+        try (InputStream in = Files.newInputStream(paths.inputPath())) {
+            FileEncryptionMetadata metadata = readMetadata(in);
+            String dekBase64 = vaultTransitService.unwrapDek(metadata.wrappedDek(), transitKey);
+            Timer.Sample sample = Timer.start(meterRegistry);
+            byte[] decrypted = encryptionProcessor.initDecryptCipher(metadata, dekBase64).doFinal(in.readAllBytes());
+            sample.stop(timer("file.cipher.latency", "decrypt"));
+            Files.write(paths.outputPath(), decrypted);
+        }
     }
 
     private void assertSafeForDoFinal(java.nio.file.Path path) throws Exception {
